# privibot

./: .cookiecutterrc  .copier-answers.yml  .cruft.json  .gitignore  CONTRIBUTING.md  CREDITS.md  Makefile  README.md  coverage.ini  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
config/: coverage.ini
docs/reference/: callbacks.md  cli.md  database.md  decorators.md  privileges.md
scripts/templates/: CREDITS.md  README.md
src/privibot/: __init__.py  __main__.py  callbacks.py  cli.py  database.py  decorators.py  privileges.py
src/privilegebot/: __init__.py  __main__.py  callbacks.py  cli.py  database.py  decorators.py
tests/: __init__.py  test_cli.py
